--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Garamond:wght@400;700&family=Inter:wght@300;400;700;900&family=Orbitron:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Garamond:ital,wght@0,400;0,700;1,400&family=Inter:wght@300;400;700;900&family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="cursor-glow"></div>
@@ -52,11 +52,11 @@
                 <h2 class="section-title animate-on-scroll" data-animation="fadeInUp">Prologue: <span class="highlight-text">Twilight</span> of the Producers</h2>
                 <div class="temporal-loom-container animate-on-scroll" data-animation="zoomIn">
                     <div class="temporal-scene" id="scene-steel-mill">
-                        <img src="https://placehold.co/800x400/2c3e50/bdc3c7?text=1965+Bethlehem+Steel" alt="1965 Bethlehem Steel Mill - Placeholder" onerror="this.src='https://placehold.co/800x400/2c3e50/bdc3c7?text=Image+Error'; this.onerror=null;">
+                        <img src="https://placehold.co/800x450/2c3e50/bdc3c7?text=Evocative+1965+Steel+Mill+Scene" alt="1965 Bethlehem Steel Mill - Evocative Scene" onerror="this.src='https://placehold.co/800x450/2c3e50/bdc3c7?text=Image+Error'; this.onerror=null;">
                         <p class="scene-caption">1965: The Forge of Nations</p>
                     </div>
                     <div class="temporal-scene" id="scene-tiktok-house">
-                        <img src="https://placehold.co/800x400/e74c3c/f1c40f?text=2025+Creator+Collab+House" alt="2025 TikTok House - Placeholder" onerror="this.src='https://placehold.co/800x400/e74c3c/f1c40f?text=Image+Error'; this.onerror=null;">
+                        <img src="https://placehold.co/800x450/e74c3c/f1c40f?text=Vibrant+2025+Creator+House+Interior" alt="2025 Creator Collab House - Vibrant Interior" onerror="this.src='https://placehold.co/800x450/e74c3c/f1c40f?text=Image+Error'; this.onerror=null;">
                         <p class="scene-caption">2025: The Factory of Views</p>
                     </div>
                     <div class="temporal-loom-controls">
@@ -82,6 +82,7 @@
                 <div class="chapter animate-on-scroll" data-animation="slideInLeft">
                     <h3>Chapter 1: Group-Chat Apocalypse</h3>
                     <p><em>The S&P broke support at 5100 while Kunal broke the last taboo of optimism. He called America Rwanda with Wi-Fi...</em></p>
+                    <img src="https://placehold.co/700x300/1a1a1a/E0E0FF?text=Stylized+Group+Chat+Interface+on+Cracked+Screen" alt="Group chat on a cracked screen" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.src='https://placehold.co/700x300/1a1a1a/E0E0FF?text=Image+Error'; this.onerror=null;">
                     <div class="interactive-placeholder" id="group-chat-interactive">
                         <h4>Interactive: The iMessage Thread</h4>
                         <div class="chat-message-container">
@@ -95,7 +96,7 @@
                      <div class="interactive-placeholder" id="colosseum-interactive">
                         <h4>Interactive: Colosseum <span class="highlight-secondary">Filters</span></h4>
                         <div class="colosseum-image-wrapper">
-                            <img src="https://placehold.co/600x350/8B4513/D2B48C?text=Colosseum+A.D.+80" alt="Colosseum - Placeholder" class="colosseum-base-image" onerror="this.src='https://placehold.co/600x350/8B4513/D2B48C?text=Image+Error'; this.onerror=null;">
+                            <img src="https://placehold.co/600x400/8B4513/D2B48C?text=Roman+Gladiator+with+Sponsored+Shield" alt="Roman Gladiator with sponsored shield" class="colosseum-base-image" onerror="this.src='https://placehold.co/600x400/8B4513/D2B48C?text=Image+Error'; this.onerror=null;">
                             <div class="colosseum-overlay" id="colosseum-filter-overlay"></div>
                         </div>
                         <div class="colosseum-controls">
@@ -116,7 +117,8 @@
                 <div class="chapter animate-on-scroll" data-animation="fadeInUp">
                     <h3>Chapter 3: Invention of the Infinite Scroll</h3>
                     <p>Origin story: Aza Raskin, 2006 UI patent. Slot-machine parallels; Vegas vs. TikTok rpm stats.</p>
-                    <aside class="infobox animate-on-scroll" data-animation="fadeIn" data-delay="100">
+                    <img src="https://placehold.co/700x350/1a1a1a/E0E0FF?text=Slot+Machine+Morphing+into+Infinite+Scroll+UI" alt="Slot machine morphing into infinite scroll" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.src='https://placehold.co/700x350/1a1a1a/E0E0FF?text=Image+Error'; this.onerror=null;">
+                    <aside class="infobox animate-on-scroll" data-animation="fadeIn" data-delay="150">
                         <h4><span class="tone-tag">[INFOBOX]</span> Five UX patterns that hack the limbic system.</h4>
                         <ol>
                             <li>Infinite Scroll</li>
@@ -141,7 +143,7 @@
                     <p>Chart: Google Trends “celebrity scandal” vs. “celebrity skill” searches (2004-2024)...</p>
                     <div class="interactive-placeholder" id="fame-trends-chart">
                         <h4>Data Viz: Talent vs. <span class="highlight-secondary">Influence</span></h4>
-                        <img src="https://placehold.co/600x300/3498db/ecf0f1?text=Interactive+Chart+Placeholder" alt="Fame Trends Chart Placeholder" onerror="this.src='https://placehold.co/600x300/3498db/ecf0f1?text=Image+Error'; this.onerror=null;">
+                        <img src="https://placehold.co/600x350/3498db/ecf0f1?text=Abstract+Chart:+Talent+vs+Influence+Lines" alt="Fame Trends Chart: Talent vs Influence" class="chart-placeholder-image" onerror="this.src='https://placehold.co/600x350/3498db/ecf0f1?text=Image+Error'; this.onerror=null;">
                         <p class="dev-note">(This would be an interactive D3.js or Chart.js chart)</p>
                     </div>
                 </div>
@@ -157,8 +159,8 @@
                      <div class="interactive-placeholder" id="rosie-morph-interactive">
                         <h4>Interactive: Rosie / <span class="highlight-secondary">Ring-Light</span> Rosie</h4>
                         <div class="rosie-morph-slider-container">
-                            <img src="https://placehold.co/400x300/2980b9/ecf0f1?text=Rosie+the+Riveter" alt="Rosie the Riveter" id="rosie-img1" onerror="this.src='https://placehold.co/400x300/2980b9/ecf0f1?text=Image+Error'; this.onerror=null;">
-                            <img src="https://placehold.co/400x300/e67e22/ecf0f1?text=Ring-Light+Rosie" alt="Ring-Light Rosie" id="rosie-img2" onerror="this.src='https://placehold.co/400x300/e67e22/ecf0f1?text=Image+Error'; this.onerror=null;">
+                            <img src="https://placehold.co/400x500/2980b9/ecf0f1?text=Classic+Rosie+the+Riveter+Pose" alt="Rosie the Riveter" id="rosie-img1" onerror="this.src='https://placehold.co/400x500/2980b9/ecf0f1?text=Image+Error'; this.onerror=null;">
+                            <img src="https://placehold.co/400x500/e67e22/ecf0f1?text=Modern+Influencer+Rosie+with+Ring+Light" alt="Ring-Light Rosie" id="rosie-img2" onerror="this.src='https://placehold.co/400x500/e67e22/ecf0f1?text=Image+Error'; this.onerror=null;">
                             <input type="range" min="0" max="100" value="0" class="rosie-slider" id="rosieMorphSlider">
                         </div>
                         <p class="dev-note">(Slide to morph between the two Rosies)</p>
@@ -167,9 +169,10 @@
                 <div class="chapter animate-on-scroll" data-animation="slideInUp" data-delay="150">
                     <h3>Chapter 6: Credit Cards & Forever Wars</h3>
                     <p>History of BankAmericard → Visa. Debt to GDP interactive chart suggestion for website.</p>
+                    <img src="https://placehold.co/700x300/1a1a1a/E0E0FF?text=Credit+Card+Morphing+into+Military+Drone" alt="Credit card morphing into military drone" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="250" onerror="this.src='https://placehold.co/700x300/1a1a1a/E0E0FF?text=Image+Error'; this.onerror=null;">
                     <div class="interactive-placeholder" id="debt-gdp-chart">
                         <h4>Data Viz: Debt to GDP</h4>
-                        <img src="https://placehold.co/600x300/27ae60/ecf0f1?text=Debt+to+GDP+Chart" alt="Debt to GDP Chart Placeholder" onerror="this.src='https://placehold.co/600x300/27ae60/ecf0f1?text=Image+Error'; this.onerror=null;">
+                        <img src="https://placehold.co/600x350/27ae60/ecf0f1?text=Stylized+Debt+to+GDP+Graph" alt="Debt to GDP Chart Placeholder" class="chart-placeholder-image" onerror="this.src='https://placehold.co/600x350/27ae60/ecf0f1?text=Image+Error'; this.onerror=null;">
                         <p class="dev-note">(Interactive chart showing debt trends)</p>
                     </div>
                 </div>
@@ -182,6 +185,7 @@
                 <div class="chapter animate-on-scroll" data-animation="zoomIn">
                     <h3>Chapter 7: 2007: Tape Heard ’Round the World</h3>
                     <p>Play-by-play of scandal → E! pilot → billion-dollar branding dynasty. Attention arbitrage explained.</p>
+                    <img src="https://placehold.co/600x400/1a1a1a/E0E0FF?text=Classical+Statue+Taking+a+Selfie+with+Smartphone" alt="Classical statue taking a selfie" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.src='https://placehold.co/600x400/1a1a1a/E0E0FF?text=Image+Error'; this.onerror=null;">
                 </div>
                 <div class="chapter animate-on-scroll" data-animation="zoomIn" data-delay="100">
                     <h3>Chapter 8: From Paris to President</h3>
@@ -196,6 +200,7 @@
                 <div class="chapter animate-on-scroll" data-animation="fadeIn">
                     <h3>Chapter 9: Who Gets Crushed First</h3>
                     <p>Rust Belt, subprime, algorithmic bias. Data: teens of color log 40% more screen hours...</p>
+                    <img src="https://placehold.co/700x400/1a1a1a/E0E0FF?text=Split+Image:+Decaying+Factory+vs+Glowing+Smartphone+Screen" alt="Decaying factory vs glowing smartphone" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.src='https://placehold.co/700x400/1a1a1a/E0E0FF?text=Image+Error'; this.onerror=null;">
                 </div>
             </div>
         </section>
@@ -206,6 +211,7 @@
                 <div class="chapter animate-on-scroll" data-animation="slideInLeft">
                     <h3>Chapter 10: The Great Re-Industrialisation?</h3>
                     <p>CHIPS Act, green steel, micro-factories. Resistance: cost, NIMBY, short political cycles.</p>
+                    <img src="https://placehold.co/600x350/1a1a1a/E0E0FF?text=Hand+Placing+Cog+into+Half-Machine+Half-Smartphone" alt="Hand placing cog into machine/smartphone hybrid" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.src='https://placehold.co/600x350/1a1a1a/E0E0FF?text=Image+Error'; this.onerror=null;">
                 </div>
                 <div class="chapter animate-on-scroll" data-animation="slideInRight">
                     <h3>Chapter 11: TikTok’s Test of Will</h3>
@@ -234,6 +240,7 @@
                 <div class="chapter animate-on-scroll" data-animation="fadeInUp">
                     <h3>Chapter 12: Screens at the End of the World</h3>
                     <p>Callback to group chat... Hopeful coda: attention can be re-directed—book lists, citizen assemblies, local maker-spaces.</p>
+                     <img src="https://placehold.co/700x400/1a1a1a/E0E0FF?text=Person+Looking+Up+From+Screen+Towards+Sunrise+or+Community" alt="Person looking up from screen towards hope" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.src='https://placehold.co/700x400/1a1a1a/E0E0FF?text=Image+Error'; this.onerror=null;">
                     <blockquote class="pull-quote-main animate-on-scroll" data-animation="fadeIn" data-delay="200">
                         <p class="animate-text-reveal"><em>“Rome gave us law; Hollywood gave us hero shots; maybe our kids will give us something <span class="highlight-secondary">better</span>—if we can teach them to <span class="highlight-secondary">look up</span> from the screen long enough to <span class="highlight-secondary">build it</span>.”</em></p>
                     </blockquote>
@@ -252,7 +259,7 @@
                     <h3>Project Manifesto & Credits</h3>
                     <p>This interactive narrative is an exploration of the themes presented in "Empire of Likes."</p>
                     <p><strong>Concept & Narrative:</strong> Based on "Empire of Likes" (Version 0.9).</p>
-                    <p><strong>Design & Development:</strong> AI-assisted generation. <span class="highlight-text">Version 2.0</span></p>
+                    <p><strong>Design & Development:</strong> AI-assisted generation. <span class="highlight-text">Version 3.0</span></p>
                  </div>
             </div>
         </section>
@@ -261,7 +268,7 @@
     <footer class="site-footer">
         <div class="container">
             <p>&copy; <span id="current-year"></span> Empire of Likes. An Interactive Exploration.</p>
-            <p><a href="#prologue" class="nav-link">Back to Top &uarr;</a></p>
+            <p><a href="#prologue" class="nav-link footer-nav-link">Back to Top &uarr;</a></p>
         </div>
     </footer>
 
