--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <h2 class="section-title animate-on-scroll" data-animation="fadeInUp">Prologue: <span class="highlight-text">Twilight</span> of the Producers</h2>
                 <div class="temporal-loom-container animate-on-scroll" data-animation="zoomIn">
                     <div class="temporal-scene" id="scene-steel-mill">
-                        <img src="https://placehold.co/800x450/2c3e50/bdc3c7?text=Evocative+1965+Steel+Mill+Scene" alt="1965 Bethlehem Steel Mill - Evocative Scene" onerror="this.src='https://placehold.co/800x450/2c3e50/bdc3c7?text=Image+Error'; this.onerror=null;">
+                        <img src="img/prologue_steel_mill.jpg" alt="1965 Bethlehem Steel Mill - Evocative Scene" onerror="this.src='https://placehold.co/800x450/2c3e50/bdc3c7?text=Image+Error:+prologue_steel_mill.jpg'; this.onerror=null;">
                         <p class="scene-caption">1965: The Forge of Nations</p>
                     </div>
                     <div class="temporal-scene" id="scene-tiktok-house">
