--- a/index.html
+++ b/index.html
@@ -52,11 +52,15 @@
                 <h2 class="section-title animate-on-scroll" data-animation="fadeInUp">Prologue: <span class="highlight-text">Twilight</span> of the Producers</h2>
                 <div class="temporal-loom-container animate-on-scroll" data-animation="zoomIn">
                     <div class="temporal-scene" id="scene-steel-mill">
-                        <img src="img/prologue_steel_mill.jpg" alt="1965 Bethlehem Steel Mill - Evocative Scene" onerror="this.src='https://placehold.co/800x450/2c3e50/bdc3c7?text=Image+Error:+prologue_steel_mill.jpg'; this.onerror=null;">
+                        <img src="img/prologue_steel_mill.jpg" 
+                             alt="1965 Bethlehem Steel Mill - Evocative Scene" 
+                             onerror="this.alt='IMAGE LOAD ERROR. Check path: img/prologue_steel_mill.jpg. Ensure file is in img folder and name matches exactly.'; this.src='https://placehold.co/800x450/1c1c3a/ff0000?text=Error:+prologue_steel_mill.jpg+NOT+FOUND'; this.onerror=null;">
                         <p class="scene-caption">1965: The Forge of Nations</p>
                     </div>
                     <div class="temporal-scene" id="scene-tiktok-house">
-                        <img src="https://placehold.co/800x450/e74c3c/f1c40f?text=Vibrant+2025+Creator+House+Interior" alt="2025 Creator Collab House - Vibrant Interior" onerror="this.src='https://placehold.co/800x450/e74c3c/f1c40f?text=Image+Error'; this.onerror=null;">
+                        <img src="img/prologue_creator_house.jpg" 
+                             alt="2025 Creator Collab House - Vibrant Interior" 
+                             onerror="this.alt='IMAGE LOAD ERROR. Check path: img/prologue_creator_house.jpg. Ensure file is in img folder and name matches exactly.'; this.src='https://placehold.co/800x450/1c1c3a/ff0000?text=Error:+prologue_creator_house.jpg+NOT+FOUND'; this.onerror=null;">
                         <p class="scene-caption">2025: The Factory of Views</p>
                     </div>
                     <div class="temporal-loom-controls">
@@ -82,7 +86,7 @@
                 <div class="chapter animate-on-scroll" data-animation="slideInLeft">
                     <h3>Chapter 1: Group-Chat Apocalypse</h3>
                     <p><em>The S&P broke support at 5100 while Kunal broke the last taboo of optimism. He called America Rwanda with Wi-Fi...</em></p>
-                    <img src="https://placehold.co/700x300/1a1a1a/E0E0FF?text=Stylized+Group+Chat+Interface+on+Cracked+Screen" alt="Group chat on a cracked screen" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.src='https://placehold.co/700x300/1a1a1a/E0E0FF?text=Image+Error'; this.onerror=null;">
+                    <img src="img/act1_ch1_group_chat_cracked.jpg" alt="Group chat on a cracked screen" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act1_ch1_group_chat_cracked.jpg'; this.src='https://placehold.co/700x300/1c1c3a/ff0000?text=Error:+act1_ch1_group_chat_cracked.jpg+NOT+FOUND'; this.onerror=null;">
                     <div class="interactive-placeholder" id="group-chat-interactive">
                         <h4>Interactive: The iMessage Thread</h4>
                         <div class="chat-message-container">
@@ -96,7 +100,7 @@
                      <div class="interactive-placeholder" id="colosseum-interactive">
                         <h4>Interactive: Colosseum <span class="highlight-secondary">Filters</span></h4>
                         <div class="colosseum-image-wrapper">
-                            <img src="https://placehold.co/600x400/8B4513/D2B48C?text=Roman+Gladiator+with+Sponsored+Shield" alt="Roman Gladiator with sponsored shield" class="colosseum-base-image" onerror="this.src='https://placehold.co/600x400/8B4513/D2B48C?text=Image+Error'; this.onerror=null;">
+                            <img src="img/act1_ch2_colosseum_gladiator.jpg" alt="Roman Gladiator with sponsored shield" class="colosseum-base-image" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act1_ch2_colosseum_gladiator.jpg'; this.src='https://placehold.co/600x400/1c1c3a/ff0000?text=Error:+act1_ch2_colosseum_gladiator.jpg+NOT+FOUND'; this.onerror=null;">
                             <div class="colosseum-overlay" id="colosseum-filter-overlay"></div>
                         </div>
                         <div class="colosseum-controls">
@@ -117,7 +121,7 @@
                 <div class="chapter animate-on-scroll" data-animation="fadeInUp">
                     <h3>Chapter 3: Invention of the Infinite Scroll</h3>
                     <p>Origin story: Aza Raskin, 2006 UI patent. Slot-machine parallels; Vegas vs. TikTok rpm stats.</p>
-                    <img src="https://placehold.co/700x350/1a1a1a/E0E0FF?text=Slot+Machine+Morphing+into+Infinite+Scroll+UI" alt="Slot machine morphing into infinite scroll" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.src='https://placehold.co/700x350/1a1a1a/E0E0FF?text=Image+Error'; this.onerror=null;">
+                    <img src="img/act2_ch3_scroll_slot_machine.jpg" alt="Slot machine morphing into infinite scroll" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act2_ch3_scroll_slot_machine.jpg'; this.src='https://placehold.co/700x350/1c1c3a/ff0000?text=Error:+act2_ch3_scroll_slot_machine.jpg+NOT+FOUND'; this.onerror=null;">
                     <aside class="infobox animate-on-scroll" data-animation="fadeIn" data-delay="150">
                         <h4><span class="tone-tag">[INFOBOX]</span> Five UX patterns that hack the limbic system.</h4>
                         <ol>
@@ -143,7 +147,7 @@
                     <p>Chart: Google Trends “celebrity scandal” vs. “celebrity skill” searches (2004-2024)...</p>
                     <div class="interactive-placeholder" id="fame-trends-chart">
                         <h4>Data Viz: Talent vs. <span class="highlight-secondary">Influence</span></h4>
-                        <img src="https://placehold.co/600x350/3498db/ecf0f1?text=Abstract+Chart:+Talent+vs+Influence+Lines" alt="Fame Trends Chart: Talent vs Influence" class="chart-placeholder-image" onerror="this.src='https://placehold.co/600x350/3498db/ecf0f1?text=Image+Error'; this.onerror=null;">
+                        <img src="img/act2_ch4_fame_trends_illustrative.jpg" alt="Fame Trends Chart: Talent vs Influence" class="chart-placeholder-image" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act2_ch4_fame_trends_illustrative.jpg'; this.src='https://placehold.co/600x350/1c1c3a/ff0000?text=Error:+act2_ch4_fame_trends_illustrative.jpg+NOT+FOUND'; this.onerror=null;">
                         <p class="dev-note">(This would be an interactive D3.js or Chart.js chart)</p>
                     </div>
                 </div>
@@ -159,8 +163,8 @@
                      <div class="interactive-placeholder" id="rosie-morph-interactive">
                         <h4>Interactive: Rosie / <span class="highlight-secondary">Ring-Light</span> Rosie</h4>
                         <div class="rosie-morph-slider-container">
-                            <img src="https://placehold.co/400x500/2980b9/ecf0f1?text=Classic+Rosie+the+Riveter+Pose" alt="Rosie the Riveter" id="rosie-img1" onerror="this.src='https://placehold.co/400x500/2980b9/ecf0f1?text=Image+Error'; this.onerror=null;">
-                            <img src="https://placehold.co/400x500/e67e22/ecf0f1?text=Modern+Influencer+Rosie+with+Ring+Light" alt="Ring-Light Rosie" id="rosie-img2" onerror="this.src='https://placehold.co/400x500/e67e22/ecf0f1?text=Image+Error'; this.onerror=null;">
+                            <img src="img/act3_ch5_rosie_riveter.jpg" alt="Rosie the Riveter" id="rosie-img1" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act3_ch5_rosie_riveter.jpg'; this.src='https://placehold.co/400x500/1c1c3a/ff0000?text=Error:+act3_ch5_rosie_riveter.jpg+NOT+FOUND'; this.onerror=null;">
+                            <img src="img/act3_ch5_rosie_influencer.jpg" alt="Ring-Light Rosie" id="rosie-img2" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act3_ch5_rosie_influencer.jpg'; this.src='https://placehold.co/400x500/1c1c3a/ff0000?text=Error:+act3_ch5_rosie_influencer.jpg+NOT+FOUND'; this.onerror=null;">
                             <input type="range" min="0" max="100" value="0" class="rosie-slider" id="rosieMorphSlider">
                         </div>
                         <p class="dev-note">(Slide to morph between the two Rosies)</p>
@@ -169,10 +173,10 @@
                 <div class="chapter animate-on-scroll" data-animation="slideInUp" data-delay="150">
                     <h3>Chapter 6: Credit Cards & Forever Wars</h3>
                     <p>History of BankAmericard → Visa. Debt to GDP interactive chart suggestion for website.</p>
-                    <img src="https://placehold.co/700x300/1a1a1a/E0E0FF?text=Credit+Card+Morphing+into+Military+Drone" alt="Credit card morphing into military drone" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="250" onerror="this.src='https://placehold.co/700x300/1a1a1a/E0E0FF?text=Image+Error'; this.onerror=null;">
+                    <img src="img/act3_ch6_card_drone_morph.jpg" alt="Credit card morphing into military drone" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="250" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act3_ch6_card_drone_morph.jpg'; this.src='https://placehold.co/700x300/1c1c3a/ff0000?text=Error:+act3_ch6_card_drone_morph.jpg+NOT+FOUND'; this.onerror=null;">
                     <div class="interactive-placeholder" id="debt-gdp-chart">
                         <h4>Data Viz: Debt to GDP</h4>
-                        <img src="https://placehold.co/600x350/27ae60/ecf0f1?text=Stylized+Debt+to+GDP+Graph" alt="Debt to GDP Chart Placeholder" class="chart-placeholder-image" onerror="this.src='https://placehold.co/600x350/27ae60/ecf0f1?text=Image+Error'; this.onerror=null;">
+                        <img src="img/act3_ch6_debt_gdp_illustrative.jpg" alt="Debt to GDP Chart Placeholder" class="chart-placeholder-image" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act3_ch6_debt_gdp_illustrative.jpg'; this.src='https://placehold.co/600x350/1c1c3a/ff0000?text=Error:+act3_ch6_debt_gdp_illustrative.jpg+NOT+FOUND'; this.onerror=null;">
                         <p class="dev-note">(Interactive chart showing debt trends)</p>
                     </div>
                 </div>
@@ -185,7 +189,7 @@
                 <div class="chapter animate-on-scroll" data-animation="zoomIn">
                     <h3>Chapter 7: 2007: Tape Heard ’Round the World</h3>
                     <p>Play-by-play of scandal → E! pilot → billion-dollar branding dynasty. Attention arbitrage explained.</p>
-                    <img src="https://placehold.co/600x400/1a1a1a/E0E0FF?text=Classical+Statue+Taking+a+Selfie+with+Smartphone" alt="Classical statue taking a selfie" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.src='https://placehold.co/600x400/1a1a1a/E0E0FF?text=Image+Error'; this.onerror=null;">
+                    <img src="img/act4_ch7_statue_selfie.jpg" alt="Classical statue taking a selfie" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act4_ch7_statue_selfie.jpg'; this.src='https://placehold.co/600x400/1c1c3a/ff0000?text=Error:+act4_ch7_statue_selfie.jpg+NOT+FOUND'; this.onerror=null;">
                 </div>
                 <div class="chapter animate-on-scroll" data-animation="zoomIn" data-delay="100">
                     <h3>Chapter 8: From Paris to President</h3>
@@ -200,7 +204,7 @@
                 <div class="chapter animate-on-scroll" data-animation="fadeIn">
                     <h3>Chapter 9: Who Gets Crushed First</h3>
                     <p>Rust Belt, subprime, algorithmic bias. Data: teens of color log 40% more screen hours...</p>
-                    <img src="https://placehold.co/700x400/1a1a1a/E0E0FF?text=Split+Image:+Decaying+Factory+vs+Glowing+Smartphone+Screen" alt="Decaying factory vs glowing smartphone" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.src='https://placehold.co/700x400/1a1a1a/E0E0FF?text=Image+Error'; this.onerror=null;">
+                    <img src="img/act5_ch9_factory_smartphone_split.jpg" alt="Decaying factory vs glowing smartphone" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act5_ch9_factory_smartphone_split.jpg'; this.src='https://placehold.co/700x400/1c1c3a/ff0000?text=Error:+act5_ch9_factory_smartphone_split.jpg+NOT+FOUND'; this.onerror=null;">
                 </div>
             </div>
         </section>
@@ -211,7 +215,7 @@
                 <div class="chapter animate-on-scroll" data-animation="slideInLeft">
                     <h3>Chapter 10: The Great Re-Industrialisation?</h3>
                     <p>CHIPS Act, green steel, micro-factories. Resistance: cost, NIMBY, short political cycles.</p>
-                    <img src="https://placehold.co/600x350/1a1a1a/E0E0FF?text=Hand+Placing+Cog+into+Half-Machine+Half-Smartphone" alt="Hand placing cog into machine/smartphone hybrid" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.src='https://placehold.co/600x350/1a1a1a/E0E0FF?text=Image+Error'; this.onerror=null;">
+                    <img src="img/act6_ch10_cog_hybrid.jpg" alt="Hand placing cog into machine/smartphone hybrid" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act6_ch10_cog_hybrid.jpg'; this.src='https://placehold.co/600x350/1c1c3a/ff0000?text=Error:+act6_ch10_cog_hybrid.jpg+NOT+FOUND'; this.onerror=null;">
                 </div>
                 <div class="chapter animate-on-scroll" data-animation="slideInRight">
                     <h3>Chapter 11: TikTok’s Test of Will</h3>
@@ -240,7 +244,7 @@
                 <div class="chapter animate-on-scroll" data-animation="fadeInUp">
                     <h3>Chapter 12: Screens at the End of the World</h3>
                     <p>Callback to group chat... Hopeful coda: attention can be re-directed—book lists, citizen assemblies, local maker-spaces.</p>
-                     <img src="https://placehold.co/700x400/1a1a1a/E0E0FF?text=Person+Looking+Up+From+Screen+Towards+Sunrise+or+Community" alt="Person looking up from screen towards hope" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.src='https://placehold.co/700x400/1a1a1a/E0E0FF?text=Image+Error'; this.onerror=null;">
+                     <img src="img/epilogue_ch12_looking_up.jpg" alt="Person looking up from screen towards hope" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/epilogue_ch12_looking_up.jpg'; this.src='https://placehold.co/700x400/1c1c3a/ff0000?text=Error:+epilogue_ch12_looking_up.jpg+NOT+FOUND'; this.onerror=null;">
                     <blockquote class="pull-quote-main animate-on-scroll" data-animation="fadeIn" data-delay="200">
                         <p class="animate-text-reveal"><em>“Rome gave us law; Hollywood gave us hero shots; maybe our kids will give us something <span class="highlight-secondary">better</span>—if we can teach them to <span class="highlight-secondary">look up</span> from the screen long enough to <span class="highlight-secondary">build it</span>.”</em></p>
                     </blockquote>
